[cmake] Correct linking for mc_trajectory

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -241,8 +241,7 @@ set(mc_trajectory_HDR
 
 add_library(mc_trajectory SHARED ${mc_trajectory_SRC} ${mc_trajectory_HDR})
 set_target_properties(mc_trajectory PROPERTIES COMPILE_FLAGS "-DMC_TRAJECTORY_EXPORTS")
-target_link_libraries(mc_trajectory PUBLIC SpaceVecAlg::SpaceVecAlg)
-target_link_libraries(mc_trajectory PUBLIC mc_rtc_3rd_party::hpp-spline)
+target_link_libraries(mc_trajectory PUBLIC mc_rtc_3rd_party::hpp-spline mc_rtc::mc_rtc_gui)
 install_mc_rtc_lib(mc_trajectory)
 
 set(mc_tasks_SRC
