[tests] Fix minor issues
- Force log directory to be /tmp (macOS seems to choose a strange
folder)
- Don't call a removed function in the Python controller test
- Throw an std::exception in ThrowingRobot

--- a/tests/controllers/mc_rtc.conf.in
+++ b/tests/controllers/mc_rtc.conf.in
@@ -17,6 +17,7 @@
 
   "Log" : @LOG_ENABLED@,
   "LogPolicy" : "@LOG_POLICY@",
+  "LogDirectory": "/tmp",
   "LogTemplate" : "mc-rtc-test",
 
   "ClearControllerModulePath" : true,
