--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install clang-format-6.0
       run: |
+        sudo rm -f /etc/apt/sources.list.d/dotnetdev.list /etc/apt/sources.list.d/microsoft-prod.list
         sudo apt-get -qq update
         sudo apt-get -qq remove clang-6.0 libclang1-6.0 libclang-common-6.0-dev libllvm6.0
         sudo apt-get -qq install clang-format-6.0 clang-format
@@ -51,6 +52,10 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: recursive
+    - name: Temporary APT mirrors cleanup
+      run: |
+        sudo rm -f /etc/apt/sources.list.d/dotnetdev.list /etc/apt/sources.list.d/microsoft-prod.list
+      if: startsWith(runner.os, 'Linux')
     - name: Install dependencies
       uses: jrl-umi3218/github-actions/install-dependencies@master
       with:
