--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -180,3 +180,20 @@ jobs:
         path: packages-${{ matrix.dist }}-${{ matrix.arch }}
         BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
         GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+  # This job force a mirror sync
+  mirror-sync:
+    needs: upload-packages
+    runs-on: ubuntu-18.04
+    steps:
+    - name: Set repository parameters
+      run: |
+        export REF=`echo ${{ github.ref }} | sed -e 's@refs/[a-z]*/@@'`
+        if [ $REF == "master" ]
+        then
+          echo "::set-env name=BINTRAY_REPO::multi-contact-head"
+        else
+          echo "::set-env name=BINTRAY_REPO::multi-contact-release"
+        fi
+    - name: Request mirror sync
+      run: |
+        curl -ugergondet:${{ secrets.BINTRAY_API_KEY }} --header "X-GPG-PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}" -X POST https://api.bintray.com/calc_metadata/gergondet/${{ env.BINTRAY_REPO }}
