[ci/Windows] Don't build GEOS tests

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,6 +76,7 @@ jobs:
               ref: 7.1.0
             - path: libgeos/geos
               ref: 3.6.3
+              options: -DGEOS_ENABLE_TESTS=False
             - path: nanomsg/nanomsg
               ref: 1.1.5
             - path: jbeder/yaml-cpp
