--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,12 +113,9 @@ jobs:
         find . -type f -print0 | xargs -0 sed -i -e's@/usr/local/share/doc/mc_rbdyn_urdf/doxygen-html/@https://jrl-umi3218.github.io/mc_rbdyn_urdf/doxygen/HEAD/@g'
         sudo apt-get install -qq ruby-dev ruby-bundler libxml2-dev
         bundle install --path vendor
+        git clone -b gh-pages https://gergondet:${{ secrets.GH_PAGES_TOKEN }}@github.com/jrl-umi3218/mc_rtc
         bundle exec jekyll build --trace -b /mc_rtc -d /tmp/website
         cd /tmp/website
-        git init
-        git remote add origin https://gergondet:${{ secrets.GH_PAGES_TOKEN }}@github.com/jrl-umi3218/mc_rtc
-        git remote update
-        git checkout -b gh-pages origin/gh-pages
         git add .
         git config --global user.email "pierre.gergondet@gmail.com"
         git config --global user.name "Pierre Gergondet (Automated CI update)"
