--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -30,7 +30,7 @@ macro(controller_test_common NAME)
   set(PYTHON_CONTROLLER_PATH "${CMAKE_BINARY_DIR}/src/mc_control/python")
   set(ROBOT_MODULE_PATH "${CMAKE_BINARY_DIR}/src/mc_robots")
   set(TEST_CONTROLLER_PATH "${CMAKE_CURRENT_BINARY_DIR}/${TEST_CONTROLLER_NAME}")
-  if(NOT DEFINED CMAKE_BUILD_TYPE)
+  if(CMAKE_CONFIGURATION_TYPES)
     set(OBSERVER_MODULE_PATH "${OBSERVER_MODULE_PATH}/$<CONFIGURATION>")
     set(PYTHON_CONTROLLER_PATH "${PYTHON_CONTROLLER_PATH}/$<CONFIGURATION>")
     set(ROBOT_MODULE_PATH "${ROBOT_MODULE_PATH}/$<CONFIGURATION>")
@@ -43,13 +43,13 @@ endmacro()
 
 macro(controller_test_construction_failure NAME)
   controller_test_common(${NAME})
-  if(DEFINED CMAKE_BUILD_TYPE)
-    set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/${NAME}/mc_rtc-${NAME}.conf")
-  else()
+  if(CMAKE_CONFIGURATION_TYPES)
     set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/${NAME}/$<CONFIGURATION>/mc_rtc-${NAME}.conf")
     file(GENERATE
        OUTPUT ${CONFIG_OUT}
        INPUT ${CMAKE_CURRENT_BINARY_DIR}/${NAME}/mc_rtc-${NAME}.conf)
+  else()
+    set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/${NAME}/mc_rtc-${NAME}.conf")
   endif()
   set_target_properties(${NAME} PROPERTIES FOLDER tests/controllers/failure)
   add_test(NAME ${NAME} COMMAND test_controller_ticker --run_test=CONSTRUCTION_FAILURE -- ${CONFIG_OUT})
@@ -57,13 +57,13 @@ endmacro()
 
 macro(controller_test_run NAME NRITER)
   controller_test_common(${NAME})
-  if(DEFINED CMAKE_BUILD_TYPE)
-    set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/${NAME}/mc_rtc-${NAME}.conf")
-  else()
+  if(CMAKE_CONFIGURATION_TYPES)
     set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/${NAME}/$<CONFIGURATION>/mc_rtc-${NAME}.conf")
     file(GENERATE
        OUTPUT ${CONFIG_OUT}
        INPUT ${CMAKE_CURRENT_BINARY_DIR}/${NAME}/mc_rtc-${NAME}.conf)
+  else()
+    set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/${NAME}/mc_rtc-${NAME}.conf")
   endif()
   set_target_properties(${NAME} PROPERTIES FOLDER tests/controllers/run)
   add_test(NAME ${NAME} COMMAND test_controller_ticker --run_test=RUN -- ${CONFIG_OUT} ${NRITER})
@@ -130,7 +130,7 @@ if(${PYTHON_BINDING})
     set(PYTHON_CONTROLLER_PATH "${CMAKE_BINARY_DIR}/src/mc_control/python")
     set(ROBOT_MODULE_PATH "${CMAKE_BINARY_DIR}/src/mc_robots")
     set(TEST_CONTROLLER_PATH "${CMAKE_CURRENT_BINARY_DIR}/${TEST_CONTROLLER_NAME}")
-    if(NOT DEFINED CMAKE_BUILD_TYPE)
+    if(CMAKE_CONFIGURATION_TYPES)
       set(PYTHON_CONTROLLER_PATH "${PYTHON_CONTROLLER_PATH}/$<CONFIGURATION>")
       set(ROBOT_MODULE_PATH "${ROBOT_MODULE_PATH}/$<CONFIGURATION>")
       set(TEST_CONTROLLER_PATH "${TEST_CONTROLLER_PATH}/$<CONFIGURATION>")
@@ -142,7 +142,7 @@ if(${PYTHON_BINDING})
     endif()
     set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/Test${PYTHON}/mc_rtc-Test${PYTHON}.conf")
     configure_file("${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in" "${CONFIG_OUT}")
-    if(NOT DEFINED CMAKE_BUILD_TYPE)
+    if(CMAKE_CONFIGURATION_TYPES)
       set(CONFIG_IN "${CONFIG_OUT}")
       set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/Test${PYTHON}/$<CONFIGURATION>/mc_rtc-Test${PYTHON}.conf")
       file(GENERATE OUTPUT "${CONFIG_OUT}" INPUT "${CONFIG_IN}")
