[tests] Run logging tests on all platforms

--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -8,6 +8,12 @@ set(USE_SANDBOX "true")
 set(ENABLED_OBSERVERS "")
 set(RUN_OBSERVERS "")
 set(UPDATE_OBSERVERS "")
+if(WIN32)
+  set(LOG_DIRECTORY "$ENV{TEMP}")
+  string(REPLACE "\\" "/" LOG_DIRECTORY "${LOG_DIRECTORY}")
+else()
+  set(LOG_DIRECTORY "/tmp")
+endif()
 
 macro(controller_test_common NAME)
   if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${NAME}.in.cpp)
@@ -77,15 +83,24 @@ set(LOG_ENABLED "true")
 controller_test_run(TestPostureController 400)
 # These tests require a /tmp LogDirectory and symlinks to access the
 # *-latest.log symlink created by mc_rtc
-if(UNIX AND NOT DEFINED PYTHON_DEB_ROOT)
+if(NOT DEFINED PYTHON_DEB_ROOT)
   set(UTILS_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR}/../../utils)
-  add_test(TestPostureControllerLog ${CMAKE_CURRENT_SOURCE_DIR}/check_log.py "TestPostureController" 400 "${UTILS_BIN_DIR}")
+  if(CMAKE_CONFIGURATION_TYPES)
+    set(UTILS_BIN_DIR "${UTILS_BIN_DIR}/$<CONFIGURATION>")
+  endif()
+  add_test(NAME TestPostureControllerLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController" 400 ${UTILS_BIN_DIR})
 
   # Test threaded log policy
   set(LOG_POLICY "threaded")
-  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in ${CMAKE_CURRENT_BINARY_DIR}/TestPostureController/mc_rtc-TestPostureController-threaded-log.conf)
-  add_test(NAME TestPostureControllerThreadedLogging COMMAND test_controller_ticker --run_test=RUN -- TestPostureController/mc_rtc-TestPostureController-threaded-log.conf 1500)
-  add_test(TestPostureControllerThreadedLog ${CMAKE_CURRENT_SOURCE_DIR}/check_log.py "TestPostureController" 1500 "${UTILS_BIN_DIR}")
+  set(CONFIG_OUT ${CMAKE_CURRENT_BINARY_DIR}/TestPostureController/mc_rtc-TestPostureController-threaded-log.conf)
+  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in ${CONFIG_OUT})
+  if(CMAKE_CONFIGURATION_TYPES)
+    set(CONFIG_IN "${CONFIG_OUT}")
+    set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/TestPostureController/$<CONFIGURATION>/mc_rtc-TestPostureController-threaded-log.conf")
+    file(GENERATE OUTPUT "${CONFIG_OUT}" INPUT "${CONFIG_IN}")
+  endif()
+  add_test(NAME TestPostureControllerThreadedLogging COMMAND test_controller_ticker --run_test=RUN -- "${CONFIG_OUT}" 1500)
+  add_test(NAME TestPostureControllerThreadedLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController" 1500 "${UTILS_BIN_DIR}")
 
   # Test controller switch and threaded log policy
   add_library(TestPostureController2 SHARED TestPostureController2.cpp)
@@ -94,13 +109,21 @@ if(UNIX AND NOT DEFINED PYTHON_DEB_ROOT)
   set_target_properties(TestPostureController2 PROPERTIES
     COMPILE_FLAGS "-DMC_CONTROL_EXPORTS"
     PREFIX ""
+    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/TestPostureController
     LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/TestPostureController
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/TestPostureController
     )
   set(TEST_CONTROLLER_NAME "TestPostureController\", \"TestPostureController2")
-  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in ${CMAKE_CURRENT_BINARY_DIR}/TestPostureController/mc_rtc-TestPostureController2.conf)
-  add_test(NAME TestPostureController2 COMMAND test_controller_ticker --run_test=RUN -- TestPostureController/mc_rtc-TestPostureController2.conf 1200 TestPostureController2)
-  add_test(TestPostureControllerControllerSwitchThreadedLog ${CMAKE_CURRENT_SOURCE_DIR}/check_log.py "TestPostureController" 1200 "${UTILS_BIN_DIR}")
-  add_test(TestPostureController2ControllerSwitchThreadedLog ${CMAKE_CURRENT_SOURCE_DIR}/check_log.py "TestPostureController2" 1200 "${UTILS_BIN_DIR}")
+  set(CONFIG_OUT ${CMAKE_CURRENT_BINARY_DIR}/TestPostureController/mc_rtc-TestPostureController2.conf)
+  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in ${CONFIG_OUT})
+  if(CMAKE_CONFIGURATION_TYPES)
+    set(CONFIG_IN "${CONFIG_OUT}")
+    set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/TestPostureController/$<CONFIGURATION>/mc_rtc-TestPostureController2.conf")
+    file(GENERATE OUTPUT "${CONFIG_OUT}" INPUT "${CONFIG_IN}")
+  endif()
+  add_test(NAME TestPostureController2 COMMAND test_controller_ticker --run_test=RUN -- "${CONFIG_OUT}" 1200 TestPostureController2)
+  add_test(NAME TestPostureControllerControllerSwitchThreadedLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController" 1200 "${UTILS_BIN_DIR}")
+  add_test(NAME TestPostureController2ControllerSwitchThreadedLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController2" 1200 "${UTILS_BIN_DIR}")
 endif()
 
 set(LOG_POLICY "non-threaded")
@@ -156,8 +179,8 @@ if(${PYTHON_BINDING})
     endif()
     set(LDPATH "$<TARGET_FILE_DIR:mc_control_fsm>")
     add_test(NAME "Test${PYTHON}Controller" COMMAND ${CMAKE_COMMAND} -E env "PYTHONPATH=${PYTHONPATH}${PATH_SEP}$ENV{PYTHONPATH}" ${CMAKE_COMMAND} -E env "${LDPATH_VAR}=${LDPATH}${PATH_SEP}$ENV{${LDPATH_VAR}}" $<TARGET_FILE:test_controller_ticker> --run_test=RUN -- "${CONFIG_OUT}" 400 "")
-    if(UNIX AND NOT DEFINED PYTHON_DEB_ROOT)
-      add_test(Test${PYTHON}Log "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "${TEST_CONTROLLER_NAME}" 400 "${UTILS_BIN_DIR}")
+    if(NOT DEFINED PYTHON_DEB_ROOT)
+      add_test(NAME Test${PYTHON}Log COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "${TEST_CONTROLLER_NAME}" 400 "${UTILS_BIN_DIR}")
     endif()
   endforeach()
 endif()
