[mc_rtc] Generate mc_rtc::version() and MC_RTC_VERSION macro
Returns a detailed version of mc_rtc. There is two objectives:

1. Libraries loaded by mc_rtc can compile MC_RTC_VERSION into their
   code, the loader can check whether it matches mc_rtc::version() and emit
   a warning in case they don't match. Indicating that the code should
   be recompiled.

2. Interfaces can implement a similar check. A missmatch indicates that
   the interface code should be recompiled.

This will help when updating mc_rtc but forgetting to recompile
controllers/interfaces as needed.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,8 +36,29 @@ macro(install_mc_rtc_lib MC_LIB)
 endmacro()
 
 configure_file(mc_rtc/loader.in.cpp "${CMAKE_CURRENT_BINARY_DIR}/mc_rtc/loader.cpp")
-add_library(mc_rtc_loader SHARED "${CMAKE_CURRENT_BINARY_DIR}/mc_rtc/loader.cpp" ../include/mc_rtc/loader.h ../include/mc_rtc/loader_api.h)
+
+set(VERSION_HEADER "${PROJECT_BINARY_DIR}/include/mc_rtc/version.h")
+add_custom_command(OUTPUT ALWAYS_RUN ${VERSION_HEADER}
+  COMMAND ${CMAKE_COMMAND} -DPROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR}"
+                           -DPROJECT_BINARY_DIR="${PROJECT_BINARY_DIR}"
+                           -DPROJECT_VERSION="${PROJECT_VERSION}"
+                           -P "${PROJECT_SOURCE_DIR}/CMakeModules/MakeVersionHeader.cmake"
+)
+
+set(mc_rtc_loader_SRC
+  "${CMAKE_CURRENT_BINARY_DIR}/mc_rtc/loader.cpp"
+  mc_rtc/version.cpp
+)
+
+set(mc_rtc_loader_HDR
+  "${VERSION_HEADER}"
+  ../include/mc_rtc/loader.h
+  ../include/mc_rtc/loader_api.h
+)
+
+add_library(mc_rtc_loader SHARED ${mc_rtc_loader_SRC} ${mc_rtc_loader_HDR})
 set_target_properties(mc_rtc_loader PROPERTIES COMPILE_FLAGS "-DMC_RTC_LOADER_EXPORTS")
+target_include_directories(mc_rtc_loader PRIVATE "${PROJECT_BINARY_DIR}/include/mc_rtc")
 target_link_libraries(mc_rtc_loader PUBLIC Boost::filesystem Boost::disable_autolinking ${LTDL})
 install_mc_rtc_lib(mc_rtc_loader)
 
